--- a/src/app/modal/select-option/select-option.component.scss
+++ b/src/app/modal/select-option/select-option.component.scss
@@ -2,6 +2,11 @@
     height: 190px !important;
 }
 
+.card-height2 {
+    height: 90px !important;
+
+}
+
 .icon {
     font-size: 80px !important;
     color: #ff4081;
@@ -114,19 +119,29 @@ input[type=number] {
     color: #fff;
     position: absolute;
     top: 10%;
-    left: 30%;
+    left: 27%;
     transform: translate(-26%, -26%);
     -ms-transform: translate(-26%, -26%);
     right: 0;
     font-weight: 400;
     font-size: 16px;
+    width: 100%;
 }
 
 
 .team-img .overlay {
-    opacity: .8;
+    opacity: .45;
 }
 
 .team-img .team-content {
     opacity: 0;
+}
+
+.opasity-sum {
+    position: absolute;
+    bottom: 0px;
+    background-color: rgba(17, 24, 31, 0.65);
+    width: 100%;
+    color: white;
+    height: 38px;
 }
