--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -3,7 +3,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <div class="row mt-3" name="rowOrder">
-  <div class="col-6 mr-0 scroll-y" name="colLeft" style="height: 90vh;">
+  <div class="col-6 mr-0 scroll-y mb-1" name="colLeft" style="height: 90vh; ">
     <!-- <div class="border-order" style="height: 100%;width: 100%;" name="divProd"> -->
     <div class="row pt-2" name="rowImageProd" style="padding-left: 5px">
       <div class="col-4 mt-2 pr-0 pl-0 cursor-pointer full-width princing-item" style="display: inline;"
@@ -39,9 +39,9 @@
         </span>
       </div>
     </div>
-
-    <div class="border-order scroll" style="width: 100%;height: 280px;" name="divProdList">
-      <span *ngFor="let item of data.items;let i = index" name="spanProdList">
+    <!-- ---reward---- -->
+    <!-- <div *ngIf="rewards.length>0" class="border-order scroll" style="width: 100%;height: 280px;" name="divProdList">
+      <span *ngFor="let item of rewards;let i = index" name="spanProdList">
         <div class="row mt-2" name="rowProdList">
           <div class="col-6 text-left" name="colProdName">
             <p class="ml-4 mb-1"> <span name="item.name">{{item.name}}</span></p>
@@ -58,12 +58,7 @@
               </div>
               <div class="col-8  text-right" name="ColSumOption"><span class="font-color pr-5" style="font-size: 13px"
                   name="it.qty">{{it.qty | number}}</span>
-                <!-- <span class="font-color" name="mutiplePrice"> * </span>
-                <span style="font-size: 13px" class="font-color" name="item.price">{{item.price | number}}</span> -->
               </div>
-              <!-- <div class="col-4 text-center" name="colSumProd">
-                <span class="font-color" style="font-size: 13px" name="sumPrice">{{it.qty * item.price | number}}</span>
-              </div> -->
             </div>
           </div>
           <div class="col-8 text-right" name="colTextSum">จำนวนรวม</div>
@@ -79,6 +74,89 @@
           <div class="col-1" name="colBorder6"></div>
         </div>
       </span>
+    </div> -->
+
+    <!-- ----data---- -->
+
+    <div class="border-order scroll" style="width: 100%;height: 280px;" name="divProdList">
+      <div>
+        <span *ngFor="let item of data.items;let i = index" name="spanProdList">
+          <div class="row mt-2" name="rowProdList">
+            <div class="col-6 text-left" name="colProdName">
+              <p class="ml-4 mb-1"> <span name="item.name">{{item.name}}</span></p>
+            </div>
+            <div class="col-6 text-right" name="colDeleteProd">
+              <i class="material-icons cursor-pointer" (click)="deleteProd(item , i)" name="iconDeleteProd">
+                delete_outline
+              </i>
+            </div>
+            <div class="col-12" *ngFor="let itm of item.option" name="colOption">
+              <div class="row" *ngFor="let it of itm.value" name="rowValue">
+                <div class="col-4 text-left" name="colValue">
+                  <span class="font-color pl-5" style="font-size: 13px" name="it.name">{{itm.name}} {{it.name}}</span>
+                </div>
+                <div class="col-8  text-right" name="ColSumOption"><span class="font-color pr-5" style="font-size: 13px"
+                    name="it.qty">{{it.qty | number}}</span>
+                  <!-- <span class="font-color" name="mutiplePrice"> * </span>
+                <span style="font-size: 13px" class="font-color" name="item.price">{{item.price | number}}</span> -->
+                </div>
+                <!-- <div class="col-4 text-center" name="colSumProd">
+                <span class="font-color" style="font-size: 13px" name="sumPrice">{{it.qty * item.price | number}}</span>
+              </div> -->
+              </div>
+            </div>
+            <div class="col-8 text-right" name="colTextSum">จำนวนรวม</div>
+            <div class="col-4 text-center" name="colSumAll">{{item.totalqty | number}}<span class="ml-3">ชิ้น</span>
+            </div>
+          </div>
+          <div class="row mt-2" name="rowBorder">
+            <div class="col-1" name="colBorder0"></div>
+            <div class="col-2 border-prod-list" name="colBorder1"></div>
+            <div class="col-2 border-prod-list" name="colBorder2"></div>
+            <div class="col-2 border-prod-list" name="colBorder3"></div>
+            <div class="col-2 border-prod-list" name="colBorder4"></div>
+            <div class="col-2 border-prod-list" name="colBorder5"></div>
+            <div class="col-1" name="colBorder6"></div>
+          </div>
+        </span>
+      </div>
+      <div>
+        <span *ngFor="let item of rewards;let i = index" name="spanProdList">
+          <div class="row mt-2" name="rowProdList">
+            <div class="col-6 text-left" name="colProdName">
+              <p class="ml-4 mb-1"> <span name="item.name">{{item.name}}</span></p>
+            </div>
+            <div class="col-6 text-right" name="colDeleteProd">
+              <i class="material-icons cursor-pointer" (click)="deleteProd(item , i)" name="iconDeleteProd">
+                delete_outline
+              </i>
+            </div>
+            <div class="col-12" *ngFor="let itm of item.option" name="colOption">
+              <div class="row" *ngFor="let it of itm.value" name="rowValue">
+                <div class="col-4 text-left" name="colValue">
+                  <span class="font-color pl-5" style="font-size: 13px" name="it.name">{{itm.name}} {{it.name}}</span>
+                </div>
+                <div class="col-8  text-right" name="ColSumOption"><span class="font-color pr-5" style="font-size: 13px"
+                    name="it.qty">{{it.qty | number}}</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-8 text-right" name="colTextSum">จำนวนรวม</div>
+            <div class="col-4 text-center" name="colSumAll">{{item.totalqty | number}}<span class="ml-3">ชิ้น</span>
+            </div>
+          </div>
+          <div class="row mt-2" name="rowBorder">
+            <div class="col-1" name="colBorder0"></div>
+            <div class="col-2 border-prod-list" name="colBorder1"></div>
+            <div class="col-2 border-prod-list" name="colBorder2"></div>
+            <div class="col-2 border-prod-list" name="colBorder3"></div>
+            <div class="col-2 border-prod-list" name="colBorder4"></div>
+            <div class="col-2 border-prod-list" name="colBorder5"></div>
+            <div class="col-1" name="colBorder6"></div>
+          </div>
+        </span>
+      </div>
+
     </div>
     <div class="row" name="rowPaymenttype">
       <div class="col-12 col-md-7 text-left" name="colPaymenttype">
@@ -119,7 +197,7 @@
       </div>
       <div class="col-6" name="colBtnSave">
         <button mat-stroked-button color="accent" (click)="onSave()" class="btn-style btn-border-style"
-          [disabled]="data.items.length === 0 || !namePayment" name="btnSave">บันทึก</button>
+          [disabled]=" data.items.length === 0 || !namePayment" name="btnSave">บันทึก</button>
       </div>
     </div>
 
