--- a/src/app/modal/modal-profile/modal-profile.component.html
+++ b/src/app/modal/modal-profile/modal-profile.component.html
@@ -8,7 +8,7 @@
       <p *ngIf="dataUser && dataUser.email">{{dataUser.email}}</p>
     </div>
   </div>
-  <div class="row mt-4">
+  <!-- <div class="row mt-4">
     <div class="col-12">
       <mat-tab-group dynamicHeight>
         <mat-tab label="ประวัติการสั่งซื้อ">
@@ -58,5 +58,5 @@
         </mat-tab>
       </mat-tab-group>
     </div>
-  </div>
+  </div> -->
 </mat-dialog-content>
