--- a/src/app/pages/search-monitor-all/search-monitor-all.component.html
+++ b/src/app/pages/search-monitor-all/search-monitor-all.component.html
@@ -29,7 +29,8 @@
               <mat-icon class="example-icon mr-3" aria-hidden="false" aria-label="Example delete icon">send
               </mat-icon>
             </button>
-            <button mat-icon-button *ngIf="item.status === 'waitpack' && user.roles[0]==='stockstaff'" (click)="printLabelAll(item)">
+            <button mat-icon-button *ngIf="item.status === 'waitpack' && user.roles[0]==='stockstaff'"
+              (click)="printLabelAll(item)">
               <mat-icon class="example-icon mr-5" aria-hidden="false" aria-label="Example heart icon">print
               </mat-icon>
             </button>
@@ -83,7 +84,8 @@
             </span>
             <div class="col-12 col-md-6" style="display: inline-block;vertical-align: top"
               *ngFor="let label2 of itm.labels; let i=index">
-              <mat-card class="m-3" [ngClass]="label2.eprint === true ? 'bg-label-print , box-shadow-true' : 'box-shadow-false'">
+              <mat-card class="m-3"
+                [ngClass]="label2.eprint === true ? 'bg-label-print , box-shadow-true' : 'box-shadow-false'">
                 <mat-card-content
                   *ngIf="item.status === 'waitpack' || item.status === 'waitshipping' || item.status === 'complete'">
                   <div class="row">
@@ -105,11 +107,27 @@
                   <p class="mb-1 text-overflow ml-3"><span>โทร: </span>
                     <span>{{itm.customer.tel}}</span></p>
                   <p class="ml-3"><small>{{itm.paymenttype.name}}</small></p>
+                  <div *ngIf="itm && itm.rewards">
+                    <div class="row" *ngFor="let reward of itm.rewards">
+                      <p class="ml-3 mt-2" *ngIf="reward && reward.name">{{reward.name}}</p>
+                      <div class="col-12">
+                        <div class="row ml-1 mr-1" *ngFor="let optReward of reward.option">
+                          <div class="col-4 col-md-3 col-lg-2 pt-1 pb-1 pl-0 pr-0 border-prod text-center"
+                            *ngFor="let valReward of optReward.value">
+                            <span class="font-option">
+                              {{valReward.name}} = {{valReward.qty}}
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                   <div class="row" *ngFor="let prod of label2.productlist">
                     <p class="ml-3 mt-2">{{prod.name}}</p>
                     <div class="col-12">
                       <div class="row ml-1 mr-1" *ngFor="let opt of prod.option">
-                        <div class="col-4 col-md-3 col-lg-2 pt-1 pb-1 pl-0 pr-0 border-prod text-center" *ngFor="let val of opt.value">
+                        <div class="col-4 col-md-3 col-lg-2 pt-1 pb-1 pl-0 pr-0 border-prod text-center"
+                          *ngFor="let val of opt.value">
                           <span class="font-option">{{val.name}} = {{val.qty}}</span>
                         </div>
                       </div>
@@ -117,7 +135,8 @@
                   </div>
                 </mat-card-content>
                 <mat-card-actions class="text-right mb-0" *ngIf="item.status === 'waitpack'">
-                  <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff' && i === 0" (click)="addBox(itm,item,label2)">
+                  <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff' && i === 0"
+                    (click)="addBox(itm,item,label2)">
                     <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
                   </button>
                   <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff'">
@@ -126,7 +145,8 @@
                     </mat-icon>
                   </button>
                   <button mat-icon-button color="accent" *ngIf="user.roles[0]==='stockstaff' && itm.labels.length > 1">
-                    <mat-icon aria-label="Example icon-button with a heart icon" (click)="deleteLabel(label2)">delete</mat-icon>
+                    <mat-icon aria-label="Example icon-button with a heart icon" (click)="deleteLabel(label2)">delete
+                    </mat-icon>
                   </button>
                 </mat-card-actions>
               </mat-card>
