--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -82,7 +82,7 @@
       <div>
         <span *ngFor="let item of data.items;let i = index" name="spanProdList">
           <div class="row mt-2" name="rowProdList">
-            <div class="col-6 text-left" name="colProdName">
+            <div class="col-6 text-left ellipsis" name="colProdName">
               <p class="ml-4 mb-1"> <span name="item.name">{{item.name}}</span></p>
             </div>
             <div class="col-6 text-right" name="colDeleteProd">
@@ -92,14 +92,16 @@
             </div>
             <div class="col-12" *ngFor="let itm of item.option" name="colOption">
               <div class="row" *ngFor="let it of itm.value" name="rowValue">
-                <div class="col-4 text-left" name="colValue">
-                  <span class="font-color pl-5" style="font-size: 13px" name="it.name">{{itm.name}} {{it.name}}</span>
+                <div class="col-0 col-sm-1 col-md-1 d-none d-sm-none d-md-block"></div>
+                <div class="col-6 col-sm-6 col-md-5 text-left" name="colValue">
+                  <span class="font-color ml-1" style="font-size: 13px" name="it.name">{{itm.name}} {{it.name}}</span>
                 </div>
-                <div class="col-8  text-right" name="ColSumOption"><span class="font-color pr-5" style="font-size: 13px"
-                    name="it.qty">{{it.qty | number}}</span>
+                <div class="col-6 col-sm-6 col-md-5 text-right" name="ColSumOption">
+                  <span class="font-color mr-1" style="font-size: 13px" name="it.qty">{{it.qty | number}}</span>
                   <!-- <span class="font-color" name="mutiplePrice"> * </span>
                 <span style="font-size: 13px" class="font-color" name="item.price">{{item.price | number}}</span> -->
                 </div>
+                <div class="col-0 col-sm-1 col-md-1 d-none d-sm-none d-md-block"></div>
                 <!-- <div class="col-4 text-center" name="colSumProd">
                 <span class="font-color" style="font-size: 13px" name="sumPrice">{{it.qty * item.price | number}}</span>
               </div> -->
@@ -192,11 +194,11 @@
 
     <div class="row mb-3" name="rowBtn">
       <div class="col-6" name="colBtnCancel">
-        <button mat-stroked-button color="accent" class="btn-style" (click)="onCancel()"
+        <button mat-stroked-button color="accent" class="btn-style ellipsis" (click)="onCancel()"
           name="btnCancel">ยกเลิกการทำรายการ</button>
       </div>
       <div class="col-6" name="colBtnSave">
-        <button mat-stroked-button color="accent" (click)="onSave()" class="btn-style btn-border-style"
+        <button mat-stroked-button color="accent ellipsis" (click)="onSave()" class="btn-style btn-border-style"
           [disabled]=" data.items.length === 0 || !namePayment" name="btnSave">บันทึก</button>
       </div>
     </div>
