--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -198,7 +198,7 @@
           name="btnCancel">ยกเลิกการทำรายการ</button>
       </div>
       <div class="col-6" name="colBtnSave">
-        <button mat-stroked-button color="accent ellipsis" (click)="onSave()" class="btn-style btn-border-style"
+        <button mat-stroked-button color="accent" (click)="onSave()" class="btn-style btn-border-style ellipsis"
           [disabled]=" data.items.length === 0 || !namePayment" name="btnSave">บันทึก</button>
       </div>
     </div>
