--- a/src/app/pages/stockpack/stockpack.component.html
+++ b/src/app/pages/stockpack/stockpack.component.html
@@ -109,7 +109,7 @@
                           <div class="col-12 text-right"><span>กล่องที่ {{i + 1}}</span></div>
                         </div>
                         <p class="mb-1 text-overflow ml-3"><span>ชื่อผู้รับ: </span> <span
-                            class="mr-1">{{label2.customer.firstname}} {{label2.eprint}}</span>
+                            class="mr-1">{{label2.customer.firstname}}</span>
                           <span>{{label2.customer.lastname}}</span></p>
 
                         <p class="mb-1 text-overflow ml-3">
