--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -39,45 +39,6 @@
         </span>
       </div>
     </div>
-    <!-- ---reward---- -->
-    <!-- <div *ngIf="rewards.length>0" class="border-order scroll" style="width: 100%;height: 280px;" name="divProdList">
-      <span *ngFor="let item of rewards;let i = index" name="spanProdList">
-        <div class="row mt-2" name="rowProdList">
-          <div class="col-6 text-left" name="colProdName">
-            <p class="ml-4 mb-1"> <span name="item.name">{{item.name}}</span></p>
-          </div>
-          <div class="col-6 text-right" name="colDeleteProd">
-            <i class="material-icons cursor-pointer" (click)="deleteProd(item , i)" name="iconDeleteProd">
-              delete_outline
-            </i>
-          </div>
-          <div class="col-12" *ngFor="let itm of item.option" name="colOption">
-            <div class="row" *ngFor="let it of itm.value" name="rowValue">
-              <div class="col-4 text-left" name="colValue">
-                <span class="font-color pl-5" style="font-size: 13px" name="it.name">{{itm.name}} {{it.name}}</span>
-              </div>
-              <div class="col-8  text-right" name="ColSumOption"><span class="font-color pr-5" style="font-size: 13px"
-                  name="it.qty">{{it.qty | number}}</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-8 text-right" name="colTextSum">จำนวนรวม</div>
-          <div class="col-4 text-center" name="colSumAll">{{item.totalqty | number}}<span class="ml-3">ชิ้น</span></div>
-        </div>
-        <div class="row mt-2" name="rowBorder">
-          <div class="col-1" name="colBorder0"></div>
-          <div class="col-2 border-prod-list" name="colBorder1"></div>
-          <div class="col-2 border-prod-list" name="colBorder2"></div>
-          <div class="col-2 border-prod-list" name="colBorder3"></div>
-          <div class="col-2 border-prod-list" name="colBorder4"></div>
-          <div class="col-2 border-prod-list" name="colBorder5"></div>
-          <div class="col-1" name="colBorder6"></div>
-        </div>
-      </span>
-    </div> -->
-
-    <!-- ----data---- -->
-
     <div class="border-order scroll" style="width: 100%;height: 280px;" name="divProdList">
       <div>
         <span *ngFor="let item of data.items;let i = index" name="spanProdList">
@@ -123,38 +84,42 @@
         </span>
       </div>
       <div>
-        <span *ngFor="let item of rewards;let i = index" name="spanProdList">
-          <div class="row mt-2" name="rowProdList">
-            <div class="col-6 text-left" name="colProdName">
+        <span *ngFor="let item of rewards;let i = index" name="spanRewards">
+          <div class="row mt-2" name="rowRewards">
+            <div class="col-6 text-left" name="colRewards">
               <p class="ml-4 mb-1"> <span name="item.name">{{item.name}}</span></p>
             </div>
-            <div class="col-6 text-right" name="colDeleteProd">
-              <i class="material-icons cursor-pointer" (click)="deleteProd(item , i)" name="iconDeleteProd">
+            <div class="col-6 text-right" name="colDeleteRewards">
+              <i class="material-icons cursor-pointer" (click)="deleteProd(item , i)" name="iconDeleteRewards">
                 delete_outline
               </i>
             </div>
-            <div class="col-12" *ngFor="let itm of item.option" name="colOption">
-              <div class="row" *ngFor="let it of itm.value" name="rowValue">
-                <div class="col-4 text-left" name="colValue">
-                  <span class="font-color pl-5" style="font-size: 13px" name="it.name">{{itm.name}} {{it.name}}</span>
+            <div class="col-12" *ngFor="let itm of item.option" name="colOptionRewards">
+              <div class="row" *ngFor="let it of itm.value" name="rowValueRewards">
+
+                <div class="col-0 col-sm-1 col-md-1 d-none d-sm-none d-md-block"></div>
+                <div class="col-6 col-sm-6 col-md-5 text-left" name="colNameRewards">
+                  <span class="font-color ml-1" style="font-size: 13px" name="it.name">{{itm.name}} {{it.name}}</span>
                 </div>
-                <div class="col-8  text-right" name="ColSumOption"><span class="font-color pr-5" style="font-size: 13px"
-                    name="it.qty">{{it.qty | number}}</span>
+                <div class="col-6 col-sm-6 col-md-5 text-right" name="ColSumOptionRewards">
+                  <span class="font-color mr-1" style="font-size: 13px" name="it.qty">{{it.qty | number}}</span>
                 </div>
+                <div class="col-0 col-sm-1 col-md-1 d-none d-sm-none d-md-block"></div>
+
               </div>
             </div>
-            <div class="col-8 text-right" name="colTextSum">จำนวนรวม</div>
-            <div class="col-4 text-center" name="colSumAll">{{item.totalqty | number}}<span class="ml-3">ชิ้น</span>
+            <div class="col-8 text-right" name="colTextSumRewards">จำนวนรวม</div>
+            <div class="col-4 text-center" name="colSumAllRewards">{{item.totalqty | number}}<span class="ml-3">ชิ้น</span>
             </div>
           </div>
-          <div class="row mt-2" name="rowBorder">
-            <div class="col-1" name="colBorder0"></div>
-            <div class="col-2 border-prod-list" name="colBorder1"></div>
-            <div class="col-2 border-prod-list" name="colBorder2"></div>
-            <div class="col-2 border-prod-list" name="colBorder3"></div>
-            <div class="col-2 border-prod-list" name="colBorder4"></div>
-            <div class="col-2 border-prod-list" name="colBorder5"></div>
-            <div class="col-1" name="colBorder6"></div>
+          <div class="row mt-2" name="rowBorderRewards">
+            <div class="col-1" name="colBorder0Rewards"></div>
+            <div class="col-2 border-prod-list" name="colBorder1Rewards"></div>
+            <div class="col-2 border-prod-list" name="colBorder2Rewards"></div>
+            <div class="col-2 border-prod-list" name="colBorder3Rewards"></div>
+            <div class="col-2 border-prod-list" name="colBorder4Rewards"></div>
+            <div class="col-2 border-prod-list" name="colBorder5Rewards"></div>
+            <div class="col-1" name="colBorder6Rewards"></div>
           </div>
         </span>
       </div>
