add function download template

--- a/src/app/pages/import-orders/import-orders.component.html
+++ b/src/app/pages/import-orders/import-orders.component.html
@@ -24,7 +24,7 @@
           <p><small>สนับสนุนการใช้งานเฉพาะไฟล์ excel เท่านั้น </small></p>
         </div>
         <div class="col-12 col-md-12 col-lg-4">
-          <button mat-raised-button color="accent">ดาวน์โหลด</button>
+          <button mat-raised-button color="accent" (click)="download()">ดาวน์โหลด</button>
         </div>
       </div>
       <div class="row"></div>
