fix issue of test

--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -33,7 +33,7 @@
           <p class="ml-2 mb-1"><span>ที่อยู่: </span> <span name="customerAddress">{{address.address.houseno}}
               <!-- {{address.address.village}}
               {{address.address.street}} -->
-              ต.{{address.address.subdistrict}} อ.{{address.address.district}} จ.{{address.address.province}}
+              <!-- ต.{{address.address.subdistrict}} อ.{{address.address.district}} จ.{{address.address.province}} -->
               {{address.address.zipcode}}</span></p>
           <p class="ml-2 mb-1"><span>เบอร์โทร: </span> <span name="customerTel">{{address.tel}}</span></p>
         </span>
