fix issue of test

--- a/src/app/pages/stockpack/stockpack.component.html
+++ b/src/app/pages/stockpack/stockpack.component.html
@@ -49,9 +49,9 @@
 
                     <p class="mb-1 text-overflow ml-3" name="itm.customer.tel">
                       <span>{{itm.customer.address.houseno}}
-                        ต.{{itm.customer.address.subdistrict}}
+                        <!-- ต.{{itm.customer.address.subdistrict}}
                         อ.{{itm.customer.address.district}}
-                        จ.{{itm.customer.address.province}}
+                        จ.{{itm.customer.address.province}} -->
                         {{itm.customer.address.zipcode}}
                       </span></p>
                     <p class="mb-1 text-overflow ml-3"><span>โทร: </span>
@@ -114,9 +114,9 @@
 
                         <p class="mb-1 text-overflow ml-3">
                           <span>{{label2.address.houseno}}
-                            ต.{{label2.address.subdistrict}}
+                            <!-- ต.{{label2.address.subdistrict}}
                             อ.{{label2.address.district}}
-                            จ.{{label2.address.province}}
+                            จ.{{label2.address.province}} -->
                             {{label2.address.zipcode}}
                           </span></p>
                         <p class="mb-1 text-overflow ml-3"><span>โทร: </span>
@@ -216,9 +216,9 @@
 
                         <p class="mb-1 text-overflow ml-3">
                           <span>{{label3.address.houseno}}
-                            ต.{{label3.address.subdistrict}}
+                            <!-- ต.{{label3.address.subdistrict}}
                             อ.{{label3.address.district}}
-                            จ.{{label3.address.province}}
+                            จ.{{label3.address.province}} -->
                             {{label3.address.zipcode}}
                           </span></p>
                         <p class="mb-1 text-overflow ml-3"><span>โทร: </span>
@@ -306,9 +306,9 @@
 
                         <p class="mb-1 text-overflow ml-3">
                           <span>{{label4.address.houseno}}
-                            ต.{{label4.address.subdistrict}}
+                            <!-- ต.{{label4.address.subdistrict}}
                             อ.{{label4.address.district}}
-                            จ.{{label4.address.province}}
+                            จ.{{label4.address.province}} -->
                             {{label4.address.zipcode}}
                           </span></p>
                         <p class="mb-1 text-overflow ml-3"><span>โทร: </span>
