--- a/src/app/pages/admin-manage-product/admin-manage-product.component.html
+++ b/src/app/pages/admin-manage-product/admin-manage-product.component.html
@@ -1,11 +1,16 @@
 <div class="row">
-  <div class="col-12 mt-4 mb-4">
+  <div class="col-10 mt-4 mb-4">
     <h4 class="mt-0">รายการสินค้า</h4>
+  </div>
+  <div class="col-2 contain-add-product">
+    <button mat-fab color="primary" (click)="addProduct()">
+      <mat-icon class="icon-add-product" aria-hidden="false" aria-label="add Product">add</mat-icon>
+    </button>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-4 mb-3" *ngFor="let item of productData">
+  <div class="col-6 col-sm-4 col-md-4 col-lg-3 col-xl-3 mb-3" *ngFor="let item of productData">
     <mat-card (click)="openModalProduct(item._id)">
       <img mat-card-image [src]="item.image">
       <mat-card-content>
