--- a/src/app/pages/admin-product-detail/admin-product-detail.component.html
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.html
@@ -1,3 +1,56 @@
-<p>
-  admin-product-detail works!
-</p>
+<div class="row">
+  <div class="col-12 mt-4 mb-4">
+    <h4 class="mt-0">{{titleName}}</h4>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-4">
+    <div>
+      <img class="img-size" src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+    </div>
+  </div>
+  <div class="col-5">
+    <mat-form-field class="full-input">
+      <mat-label>ชื่อ</mat-label>
+      <input matInput>
+    </mat-form-field>
+    <br>
+    <mat-form-field class="full-input">
+      <mat-label>ราคา</mat-label>
+      <input matInput>
+    </mat-form-field>
+    <div>
+      <mat-label class="mr-5">เป็นของรางวัล</mat-label>
+      <mat-slide-toggle></mat-slide-toggle>
+    </div>
+  </div>
+</div>
+
+<div *ngIf="productData && productData.option">
+  <div *ngFor="let option of productData.option">
+    <div class="row mt-3">
+      <div class="col-6">
+        <mat-form-field class="full-input">
+          <mat-label>ex. สี, ไซต์, ขนาด</mat-label>
+          <span matPrefix>ประเภทสินค้า &nbsp;</span>
+          <input matInput>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 icon-container">
+        <mat-icon class="icon-add" aria-hidden="false" aria-label="add product icon">add_circle_outline</mat-icon>
+      </div>
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3" *ngFor="let item of option.value">
+        <mat-card>
+          <img mat-card-image class="img-item-size" [src]="item.image">
+          <mat-card-content>
+            <p class="text-center">{{item.name}}</p>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
+  </div>
+</div>
