--- a/src/app/pages/admin-product-detail/admin-product-detail.component.html
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.html
@@ -1,16 +1,18 @@
 <div class="row">
-  <div class="col-12 mt-4 mb-4">
-    <h4 class="mt-0">{{titleName}}</h4>
+  <div class="col-8 mt-4 mb-4 d-flex">
+    <button mat-raised-button color="warn">ย้อนกลับ</button>
+    <h4 class="mt-0 mb-0 ml-3 d-flex align-items-center">{{titleName}}</h4>
+  </div>
+  <div class="col-4 mt-4 mb-4 text-right">
+    <button mat-raised-button color="primary">บันทึก</button>
   </div>
 </div>
-
+<!-- col-sm-6 col-md-4 col-lg-3 col-xl-3 -->
 <div class="row">
-  <div class="col-4">
-    <div>
-      <img class="img-size" src="https://material.angular.io/assets/img/examples/shiba2.jpg">
-    </div>
+  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
+    <img class="img-size" src="./../../../assets/images/dragdrop.png">
   </div>
-  <div class="col-5">
+  <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 pt-3">
     <mat-form-field class="full-input">
       <mat-label>ชื่อ</mat-label>
       <input matInput>
@@ -30,8 +32,8 @@
 <div *ngIf="productData && productData.option">
   <div *ngFor="let option of productData.option">
     <div class="row mt-3">
-      <div class="col-6">
-        <mat-form-field class="full-input">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <mat-form-field class="full-input pl-2">
           <mat-label>ex. สี, ไซต์, ขนาด</mat-label>
           <span matPrefix>ประเภทสินค้า &nbsp;</span>
           <input matInput>
@@ -40,7 +42,7 @@
     </div>
 
     <div class="row mt-3">
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 icon-container">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 d-flex justify-content-center align-items-center mb-3">
         <mat-icon class="icon-add" aria-hidden="false" aria-label="add product icon">add_circle_outline</mat-icon>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3" *ngFor="let item of option.value">
