--- a/src/app/pages/admin-product-detail/admin-product-detail.component.scss
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.scss
@@ -1,15 +1,10 @@
 .img-size {
-    width: 100%;
+    height: 200px;
+    cursor: pointer;
 }
 
 .full-input {
     width: 100%;
-}
-
-.icon-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .icon-add {
