--- a/src/app/pages/admin-manage-product/admin-manage-product.component.scss
+++ b/src/app/pages/admin-manage-product/admin-manage-product.component.scss
@@ -1,10 +1,10 @@
-.icon-add-product {
-    font-size: 50px;
-    height: 100%;
-    width: 100%;
-    position: relative;
-    bottom: 10px;
-}
+// .icon-add-product {
+//     font-size: 50px;
+//     height: 100%;
+//     width: 100%;
+//     position: relative;
+//     bottom: 10px;
+// }
 
 mat-card {
     cursor: pointer;
