--- a/src/app/pages/admin-manage-product/admin-manage-product.component.html
+++ b/src/app/pages/admin-manage-product/admin-manage-product.component.html
@@ -3,9 +3,7 @@
     <h4 class="mt-0 mb-0">รายการสินค้า</h4>
   </div>
   <div class="col-2 d-flex justify-content-end align-items-center">
-    <button mat-fab color="primary" (click)="addProduct()">
-      <mat-icon class="icon-add-product" aria-hidden="false" aria-label="add Product">add</mat-icon>
-    </button>
+    <button mat-raised-button color="primary" (click)="addProduct()">เพิ่มสินค้า</button>
   </div>
 </div>
 
