--- a/src/app/pages/admin-product-detail/admin-product-detail.component.scss
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.scss
@@ -1,5 +1,7 @@
 .img-size {
+    object-fit: cover;
     height: 200px;
+    width: 200px;
     cursor: pointer;
 }
 
@@ -7,15 +9,19 @@
     width: 100%;
 }
 
+.btn-add-border {
+    border: 1px dashed;
+}
+
+.item-contain-size {
+    height: 255px;
+}
+
 .icon-add {
     color: gray;
     transform: scale(5);
     cursor: pointer;
 }
-
-// mat-card {
-//     cursor: pointer;
-// }
 
 .img-item-size {
     object-fit: cover;
