--- a/src/app/pages/admin-product-detail/admin-product-detail.component.html
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.html
@@ -45,8 +45,8 @@
     </div>
 
     <div class="row mt-3">
-      <div
-        class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 d-flex justify-content-center align-items-center mb-3 item-contain-size btn-add-border">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 d-flex justify-content-center align-items-center 
+        mb-3 item-contain-size btn-add-border" (drop)="drop($event)" (dragover)="allowDrop($event)">
         <mat-icon class="icon-add" aria-hidden="false" aria-label="add product icon">add_circle_outline</mat-icon>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3 item-contain-size" *ngFor="let item of option.value">
