--- a/src/app/pages/admin-product-detail/admin-product-detail.component.html
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.html
@@ -10,7 +10,7 @@
 </div>
 <!-- col-sm-6 col-md-4 col-lg-3 col-xl-3 -->
 <div class="row" *ngIf="productData">
-  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
+  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center" (drop)="dropTitle($event)" (dragover)="allowDrop($event)">
     <img *ngIf="productData.image === ''" class="img-size" src="./../../../assets/images/dragdrop.png">
     <img *ngIf="productData.image !== ''" class="img-size" src="{{productData.image}}">
   </div>
@@ -26,7 +26,7 @@
     </mat-form-field>
     <div>
       <mat-label class="mr-5">เป็นของรางวัล</mat-label>
-      <mat-slide-toggle [checked]="productData.reward === 'true' ? true : false" (change)="setValue($event)">
+      <mat-slide-toggle [(ngModel)]="productData.reward" (change)="setValue($event)">
       </mat-slide-toggle>
     </div>
   </div>
@@ -46,7 +46,7 @@
 
     <div class="row mt-3">
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 d-flex justify-content-center align-items-center 
-        mb-3 item-contain-size btn-add-border" (drop)="drop($event)" (dragover)="allowDrop($event)">
+        mb-3 item-contain-size btn-add-border" (click)="openAddItem()">
         <mat-icon class="icon-add" aria-hidden="false" aria-label="add product icon">add_circle_outline</mat-icon>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3 item-contain-size" *ngFor="let item of option.value">
