--- a/src/app/pages/admin-product-detail/admin-product-detail.component.html
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.html
@@ -10,7 +10,9 @@
 </div>
 <!-- col-sm-6 col-md-4 col-lg-3 col-xl-3 -->
 <div class="row" *ngIf="productData">
-  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center" (drop)="dropTitle($event)" (dragover)="allowDrop($event)">
+  <input hidden type="file" #uploader (change)="handleFileInput($event.target.files)" />
+  <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center" (drop)="dropTitle($event)"
+    (dragover)="allowDrop($event)" (click)="uploader.click()">
     <img *ngIf="productData.image === ''" class="img-size" src="./../../../assets/images/dragdrop.png">
     <img *ngIf="productData.image !== ''" class="img-size" src="{{productData.image}}">
   </div>
