--- a/src/app/pages/admin-product-detail/admin-product-detail.component.scss
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.scss
@@ -3,6 +3,8 @@
     height: 200px;
     width: 200px;
     cursor: pointer;
+    border-radius: 10%;
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
 }
 
 .full-input {
@@ -12,6 +14,7 @@
 .btn-add-border {
     border: 1px dashed;
     cursor: pointer;
+    border-radius: 5%;
 }
 
 .item-contain-size {
