--- a/src/app/modal/modal-add-product/modal-add-product.component.html
+++ b/src/app/modal/modal-add-product/modal-add-product.component.html
@@ -1,11 +1,12 @@
 <div class="pl-2 pr-2">
   <mat-form-field class="full-input">
     <mat-label>ชื่อ</mat-label>
-    <input matInput>
+    <input matInput [(ngModel)]="data.name">
   </mat-form-field>
 </div>
 <div class="text-center">
-  <img class="img-size" src="./../../../assets/images/dragdrop.png">
+  <img *ngIf="data.image === ''" class="img-size" src="./../../../assets/images/dragdrop.png">
+  <img *ngIf="data.image !== ''" class="img-size" [src]="data.image">
 </div>
 
 <div mat-dialog-actions>
@@ -13,6 +14,7 @@
     <button mat-raised-button color="warn" mat-dialog-close>ยกเลิก</button>
   </div>
   <div class="col-6 text-right">
-    <button mat-raised-button color="primary" [mat-dialog-close]="data" disabled>เพิ่ม</button>
+    <button mat-raised-button color="primary" [mat-dialog-close]="data"
+      [disabled]="data.name === '' || data.image === ''">เพิ่ม</button>
   </div>
 </div>
