--- a/src/app/pages/admin-product-detail/admin-product-detail.component.html
+++ b/src/app/pages/admin-product-detail/admin-product-detail.component.html
@@ -52,7 +52,7 @@
         <mat-icon class="icon-add" aria-hidden="false" aria-label="add product icon">add_circle_outline</mat-icon>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-3 item-contain-size" *ngFor="let item of option.value">
-        <mat-card>
+        <mat-card (click)="openAddItem(item)">
           <img mat-card-image class="img-item-size" [src]="item.image">
           <mat-card-content>
             <p class="text-center">{{item.name}}</p>
